A restaurant landing page created

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div id="bottom-header">
             <div id="top-part">
                 <div id="call">
-                    <p><strong>Call US: (+91)9015169012</strong></p>
-                    <p>E-mail:aaanjalibisht@gmail.com</p>
+                    <p><strong>Call US: (+91)9876543210</strong></p>
+                    <p>E-mail:anjibisht5@gmail.com</p>
                 </div>
                 <div>
-                    <img class=logo src="./5f33fd38999c0c873dfad44b_Freshly_logo-dkgreen-web.png" alt="logo">
+                    <img class=logo src="./image/main_logo.png" alt="logo">
                 </div>
                 <div id="timing">
                     <p><strong>Working hours:</strong></p>
@@ -71,10 +71,6 @@
     </h1>
     </div>
 </section>
-
-<!-- <div class="top-products">
-<h2 id="top-products-heading">Top Products</h2>
-</div> -->
 
 
 <div class="about-fresh-meal">
@@ -172,11 +168,11 @@
      <h1 id="contact-heading">Contact Us</h1>
      <div id="contact-div">
        <h3>Call Us:</h3>
-       <p>(+91)9015169012</p>
+       <p>(+91)9876543210</p>
     </div>
     <div id="contact-div">
         <h3>E-mail:</h3>
-        <p>aaanjalibisht@gmail.com</p>
+        <p>anjibisht5@gmail.com</p>
      </div>
      <div id="contact-div">
         <h3>Working hours:</h3>
